[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/item_modules/laser.gd" type="Script" id=1]
[ext_resource path="res://assets/items.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 32 )

[node name="Laser" type="Node2D"]
script = ExtResource( 1 )

[node name="LaserTip" type="Node2D" parent="."]
position = Vector2( 42, 0 )

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2( 1, 0.5 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1, 0.5 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, -32 )
hframes = 8
vframes = 8
frame = 2

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
